--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-validation": "^4.1.0",
+    "insomnia-plugin-documenter": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
